# Aeolus

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: Aeolus.cpp  Aeolus.h  Bot.h  CMakeLists.txt  behavior_executor.cpp  behavior_executor.h  build_order_enum.h  build_order_executor.cpp  build_order_executor.h  constants.cpp  constants.h  main.cpp
src/behaviors/: behavior.h
src/behaviors/macro_behaviors/: auto_supply.cpp  auto_supply.h  build_geysers.cpp  build_geysers.h  build_structure.cpp  build_structure.h  build_workers.cpp  build_workers.h  expand.cpp  expand.h  macro_behavior.h  mining.cpp  mining.h  production_controller.cpp  production_controller.h  spawn_controller.cpp  spawn_controller.h
src/behaviors/micro_behaviors/: a_move.cpp  a_move.h  attack_target_unit.cpp  attack_target_unit.h  keep_unit_safe.cpp  keep_unit_safe.h  micro_behavior.h  micro_maneuver.h  move.cpp  move.h  path_to_target.cpp  path_to_target.h  shoot_target_in_range.cpp  shoot_target_in_range.h  stutter_unit_back.cpp  stutter_unit_back.h
src/managers/: building_manager.cpp  building_manager.h  defense_manager.cpp  defense_manager.h  hub.cpp  hub.h  manager.h  manager_mediator.cpp  manager_mediator.h  neutral_unit_manager.cpp  neutral_unit_manager.h  path_manager.cpp  path_manager.h  placement_manager.cpp  placement_manager.h  resource_manager.cpp  resource_manager.h  unit_filter_manager.cpp  unit_filter_manager.h  unit_property_manager.cpp  unit_property_manager.h  unit_role_manager.cpp  unit_role_manager.h
src/pathing/: grid.cpp  grid.h  map_data.cpp  map_data.h  weight_costs.h
src/utils/: Astar.hpp  feature_layer_utils.cpp  feature_layer_utils.h  file_io_utils.h  game_utils.cpp  game_utils.h  grid_utils.cpp  grid_utils.h  kdtree_utils.cpp  kdtree_utils.h  position_utils.cpp  position_utils.h  strategy_utils.h  unit_utils.cpp  unit_utils.h
